Carbonara recipes added to the Mighty Odin Recipes

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -35,12 +35,47 @@
         brown for about 15 minutes over medium heat, being careful not to burn it or it will smell too strong.</p>
     <img src="../recipes/images/spaghetti-process2.jpg" alt="spaghetti-process2">
     <p>
-
+        Meanwhile, put spaghetti in boiling water <font color="red">(4)</font> and cook for the time indicated on the
+        package. In the meantime,
+        pour the yolks into a bowl <font color="red">(5)</font>, add most of the Pecorino cheese needed for the recipe
+        and the remaining part will
+        be used just before serving.
     </p>
-
+    <img src="../recipes/images/spaghetti-process3.jpg" alt="spaghetti-carbonara-process3">
+    <p>
+        Season with black pepper <font color="red">(7)</font> and whip by hand <font color="red">(8)</font>. Add a
+        tablespoon of cooking water to dilute the mixture and stir
+        <font color="red">(9)</font>.
+    </p>
+    <img src="../recipes/images/spaghetti-process4.jpg" alt="spaghetti-carbonara-process4">
+    <p>
+        In the meantime the guanciale will be cooked, turn off the burner and set it aside <font color="red">(10)</font>
+        .
+        Drain the pasta al dente
+        directly into the pan with the guanciale <font color="red">(11)</font> and stir it briefly to season it. Remove
+        from heat and pour the
+        mixture of eggs and pecorino cheese <font color="red">(12)</font>into the pan. Mix quickly to combine.
+    </p>
+    <img src="../recipes/images/spaghetti-process5.jpg" alt="spaghetti-carbonara-process5">
+    <p>
+        To make it very creamy, if necessary, you can add a little cooking water to your pasta <font color="red">(13)
+        </font>. Serve spaghetti
+        carbonara immediately with the remaining pecorino cheese <font color="red">(14)</font> and ground black pepper
+        <font color="red">(15)</font> on top.
+    </p>
+    <h3>Storage</h3>
+    <p>We recommend eating <strong>spaghetti carbonara </strong> away.
+        No type of storage is recommended.</p>
+    <h3>Tips</h3>
+    <p>What can you add to spaghetti carbonara? First of all, respecting your taste in the kitchen is always very
+        important! If you're still not sure, here are some very good alternatives. For example, as an alternative to
+        spaghetti you can also use rigatoni or mezze maniche pasta, and instead of the guanciale, try bacon strips with
+        oil or butter. Or replace the pecorino cheese or mix it with grated parmesan cheese. And finally, to make your
+        carbonara even more creamier, there will be no need to add cream! You can simply add a little cooking water to
+        the pasta or use a combination of whole eggs and yolks: try to find the consistency you prefer! We used
+        spaghetti No. 3, but you can also try spaghetti No. 5 and Spaghettoni pasta!</p>
     <a href="https://www.giallozafferano.com/recipes/Spaghetti-Carbonara-Bacon-and-egg-spaghetti.html"
-        alt="spaghetti-carbonara-recipe">Check out the
-        Spaghetti Carbonara Recipes</a>
+        alt="spaghetti-carbonara-recipe">Check out the full Recipes</a>
 </body>
 
 </html>
