--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <body>
     <h1>The Mighty Odin</h1>
+    <img src="./recipes/images/odin main.png" alt="odin-main">
     <p>In the realm of cuisine, mighty Odin shares divine recipes like Nordic Meatballs, Honeyed Apples, Thunderous
-        Roasted Chicken, and Idun's Orchard Salad. A feast fit for gods, blessed by Odin's knowledge.</p>
+        Roasted Chicken, and Idun's Orchard Salad. A feast fit for gods.</p>
+    <h1>Chef Odin Recipes:</h1>
+    <a href="./recipes/carbonara.html" target="_blank">The Mighty Spaghetti Carbonara</a>
 </body>
 
 </html>
