Adding tripe soup to the recipes book

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <p>In the realm of cuisine, mighty Odin shares divine recipes like Nordic Meatballs, Honeyed Apples, Thunderous
         Roasted Chicken, and Idun's Orchard Salad. A feast fit for gods.</p>
     <h1>Chef Odin Recipes:</h1>
-    <a href="./recipes/carbonara.html" target="_blank">The Mighty Spaghetti Carbonara</a>
+    <ul>
+        <li><a href="./recipes/carbonara.html" target="_blank">The Mighty Spaghetti Carbonara</a></li>
+    </ul>
 </body>
 
 </html>
