--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h1>Chef Odin Recipes:</h1>
     <ul>
         <li><a href="./recipes/carbonara.html" target="_blank">The Mighty Spaghetti Carbonara</a></li>
+        <li><a href="./recipes/tripesoup.html" target="_blank">The Mighty Tripe Soup</a></li>
+        <li><a href="./recipes/sarmale.html" target="_blank">The Mighty Cabbage Rolls</a></li>
+
     </ul>
 </body>
 
