Finish adding meatballs  recipe and ident the code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="./recipes/carbonara.html" target="_blank">The Mighty Spaghetti Carbonara</a></li>
         <li><a href="./recipes/tripesoup.html" target="_blank">The Mighty Tripe Soup</a></li>
         <li><a href="./recipes/sarmale.html" target="_blank">The Mighty Cabbage Rolls</a></li>
-
+        <li><a href="./recipes/meatballs.html" target="_blank">The Mighty Italian Meatballs</a></li>
     </ul>
 </body>
 
