--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -9,10 +9,13 @@
 
 <body>
     <h1>Spaghetti Carbonara</h1>
-    <p><strong>Mighty Odin</strong> the legendary chef, brings us Spaghetti Carbonara—a divine Italian delight. Al dente
+    <p>
+        <strong>Mighty Odin</strong> the legendary chef, brings us Spaghetti Carbonara—a divine Italian delight. Al
+        dente
         spaghetti
         meets a creamy sauce of eggs, Pecorino Romano cheese, and crispy guanciale. The result? An enchanting blend
-        of savory, smoky flavors that captivate all who taste it. A true masterpiece of Odin's culinary prowess.</p>
+        of savory, smoky flavors that captivate all who taste it. A true masterpiece of Odin's culinary prowess.
+    </p>
     <img src="../recipes/images/carbonaraimg/spaghetti-carbonara.jpg" alt="spaghetti-carbonara-main">
     <h4>Ingredients:</h4>
     <ul>
@@ -25,14 +28,16 @@
     <h4>Prepartion:</h4>
     <img src="../recipes/images/carbonaraimg/spaghetti-process1.jpg" alt="spaghetti-carbonara-process1">
     <!-- Using strong i will bold the exactly text -->
-    <p>To prepare <strong>spaghetti carbonara</strong> start by putting a pot of salted water on the burner to cook the
+    <p>
+        To prepare <strong>spaghetti carbonara</strong> start by putting a pot of salted water on the burner to cook the
         pasta. In the
         meantime, remove the pork rind from the guanciale <font color="red">(1)</font> and cut it first into slices and
         then into
         strips about 1/2"
         (1cm) <font color="red">(2)</font> thick. The removed rind can be reused to flavor other things. Put the pieces
         into a non-stick pan <font color="red">(3)</font> and
-        brown for about 15 minutes over medium heat, being careful not to burn it or it will smell too strong.</p>
+        brown for about 15 minutes over medium heat, being careful not to burn it or it will smell too strong.
+    </p>
     <img src="../recipes/images/carbonaraimg/spaghetti-process2.jpg" alt="spaghetti-process2">
     <p>
         Meanwhile, put spaghetti in boiling water <font color="red">(4)</font> and cook for the time indicated on the
@@ -64,10 +69,13 @@
         <font color="red">(15)</font> on top.
     </p>
     <h3>Storage</h3>
-    <p>We recommend eating <strong>spaghetti carbonara </strong> away.
-        No type of storage is recommended.</p>
+    <p>
+        We recommend eating <strong>spaghetti carbonara </strong> away.
+        No type of storage is recommended.
+    </p>
     <h3>Tips</h3>
-    <p>What can you add to spaghetti carbonara? First of all, respecting your taste in the kitchen is always very
+    <p>
+        What can you add to spaghetti carbonara? First of all, respecting your taste in the kitchen is always very
         important! If you're still not sure, here are some very good alternatives. For example, as an alternative to
         spaghetti you can also use rigatoni or mezze maniche pasta, and instead of the guanciale, try bacon strips with
         oil or butter. Or replace the pecorino cheese or mix it with grated parmesan cheese. And finally, to make your
