Ident some lines in the code and make it clear

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -83,7 +83,7 @@
         the pasta or use a combination of whole eggs and yolks: try to find the consistency you prefer! We used
         spaghetti No. 3, but you can also try spaghetti No. 5 and Spaghettoni pasta!</p>
     <a href="https://www.giallozafferano.com/recipes/Spaghetti-Carbonara-Bacon-and-egg-spaghetti.html"
-        alt="spaghetti-carbonara-recipe">Check out the full Recipes</a>
-</body>
+        alt="spaghetti-carbonara-recipe">Check out the full recipe here!
+    </a>
 
 </html>
