--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -27,7 +27,7 @@
             Italians use milk for soaking. I use grated onion – see next point.</li>
         <li><b>Soak bread in grated onion = better flavour</b> Grating the onions serves a few purposes.
         </li>
-        <!-- Using anotoher orderlist to as child  -->
+        <!-- Using anotoher orderlist to as child -->
         <ul>
             <li><b>Flavour:</b> 80% of my recipes start with “sauté onion until golden”. And there’s a reason for that.
                 Onion is a flavour base that can’t be beaten, and I want it in my meatballs;</li>
@@ -58,8 +58,12 @@
         as juicy as pan frying (sear = trapped juices).
 
         To bake meatballs, preferably use a rack placed on a tray – helps keep the base more round – then just spray
-        both the rack and the meatballs generously with oil and bake at 200C/400F for 20 minutes.</p>
+        both the rack and the meatballs generously with oil and bake at 200C/400F for 20 minutes.
+    </p>
     <img src="../recipes/images/meatballsimg/Italian-Meatballs.jpg" alt="finalmeatballs">
+    <a href="https://www.recipetineats.com/classic-italian-meatballs-extra-soft-and-juicy/">Check out full recipe here
+        !
+    </a>
 </body>
 
 </html>
