--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -133,7 +133,9 @@
         That’s it! You can follow my method for rolling the perfect cabbage rolls by checking out the video in the
         recipe card.
     </p>
-    <a href="https://www.jocooks.com/recipes/sarmale/">Check out full recipe here!</a>
+    <a href="https://www.jocooks.com/recipes/sarmale/">Check out full recipe here!
+
+    </a>
 </body>
 
 </html>
