--- a/recipes/tripesoup.html
+++ b/recipes/tripesoup.html
@@ -108,7 +108,8 @@
         To make reheating easier, let the soup thaw overnight in the fridge. You can reheat straight from the freezer,
         but you will just have to be careful and stir often to break up the ice.
     </p>
-    <a href="https://www.jocooks.com/recipes/tripe-soup-ciorba-de-burta/">Check out the full recipese here!</a>
+    <a href="https://www.jocooks.com/recipes/tripe-soup-ciorba-de-burta/">Check out the full recipese here!
+    </a>
     <br>
     <img src="../recipes/images/tripesoupimg/tripesoupendjpg" alt="tripesoupend">
 
